# underwater-systems

./: .gitignore  01_intro.html  02_ocean_acoustics-handout_part_2.html  03_the_acoustic_channel.html  100_Template_Final_Presentation.html  100_Template_Final_Report.html  JUPYTER-BOOK-INTEGRATION.html  README.md  acoustic_systems.html  environmental-variability.html  faq.html  getting_started_with_python_and_jupyter_notebook.html  index.html  index.ipynb  intro-handout.html  intro-short.html  intro.html  msc_thesis_program.html  news.html  ocean_acoustics-handout_part_1.html  ocean_acoustics.html  oceanographic_sensors.html  package.json  pyproject.toml  ray_tracing.html  references.html  requirements.txt  robots.txt  ros.html  search.json  settings.ini  sitemap.xml  sonar_practical_applications.html  syllabus.html  template_weekly_update.html  the_acoustic_channel.html  the_sonar_equations.html  the_wave_equation.html  toc.html  underwater_navigation.html
nbs/: 00_FAQ.ipynb  00_Getting_started_with_Python_and_Jupyter_Notebook.ipynb  00_MSc_Thesis_Program.ipynb  00_ROS.ipynb  00_Syllabus.ipynb  00_TOC.ipynb  01_intro-handout.ipynb  01_intro-short.ipynb  01_intro.ipynb  02_ocean_acoustics-handout_part_1.ipynb  02_ocean_acoustics-handout_part_2.ipynb  02_ocean_acoustics.ipynb  03_the_acoustic_channel.ipynb  04_ray_tracing.ipynb  05_environmental-variability.ipynb  06_oceanographic_sensors.ipynb  07_the_wave_equation.ipynb  08_acoustic_systems.ipynb  09_the_sonar_equations.ipynb  100_Template_Final_Presentation.ipynb  100_Template_Final_Report.ipynb  12_References.ipynb  (+12 more)
(+5 files in other folders)
